--- a/client/assets/css/header.css
+++ b/client/assets/css/header.css
@@ -282,6 +282,7 @@ a{
 }
 
 .box{
+    position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -300,6 +301,7 @@ a{
     height: 0%;
     background-color: rgba(255,255, 255, 0.1);
     transition: 0.8s;
+    z-index: 2;
 }
 
 .box:hover::before{
@@ -314,16 +316,15 @@ a{
 }
 
 .trademark::-webkit-scrollbar, .product-price-sp::-webkit-scrollbar{
-    width: 6px;
+    width: 3px;
 }
 
 ::-webkit-scrollbar{
-    width: 10px;
+    width: 8px;
 }
 
 ::-webkit-scrollbar-thumb{
     background: #09674f;
-    border-radius: 6px;
 }
 
 .section-sp{
