--- a/client/assets/abstracts/_mixins.scss
+++ b/client/assets/abstracts/_mixins.scss
@@ -210,3 +210,12 @@
 
 /* End Slider */
 
+/* NPprocess */
+#nprogress .bar {
+  background: $white;
+}
+/* End NPprocess */
+
+/* Drawer */
+
+/* End Drawer */
