--- a/client/assets/css/global.css
+++ b/client/assets/css/global.css
@@ -23,13 +23,17 @@ body {
     overflow: hidden;
 }
 
+html {
+    font-family: sans-serif
+}
+
 html.frozen {
     overflow: hidden;
 }
-
+/*
 a:hover {
     --bs-link-color-rgb: none;
-}
+}*/
 
 .component-overlay,.start-component-overlay {
     display: flex;
@@ -91,7 +95,7 @@ a:hover {
 }
 
 body{
-    font-family: "Segoe UI","Roboto","Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !important;
     font-weight: 400 !important;
     background-color: #f5f5f5;
     opacity: 1 !important;
@@ -873,4 +877,20 @@ label.label-info {
 
 a.link-footer:hover{
     color: var(--yellow) !important;
+}
+
+.form-group {
+    margin-top: 2rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+@media screen and (max-width: 992px) {
+    .form-group {
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 0;
+    }
 }
