--- a/client/assets/abstracts/_mixins.scss
+++ b/client/assets/abstracts/_mixins.scss
@@ -104,7 +104,7 @@
   background-color: $white;
   z-index: 101;
   font-size: 14px;
-  transition: transform 0.5s;
+  transition: transform 0.3s;
   transform: translateX(-100%);
   .sidebar-close {
     position: absolute;
@@ -157,7 +157,8 @@
       background-color: $white;
       height: 60vh;
       overflow-y: auto;
-      .sidebar-item {
+      .sidebar-item,
+      .v-expansion-panel-title {
         padding: 10px 20px 10px 5px;
         border-bottom: 1px solid #ddd;
       }
@@ -282,3 +283,168 @@
   }
 }
 /* End Grid */
+
+/* Custom Paginate */
+@media (max-width: 960px) {
+  .v-pagination__list {
+    padding-left: 0;
+    .v-pagination__item,
+    .v-pagination__first,
+    .v-pagination__prev,
+    .v-pagination__next,
+    .v-pagination__last {
+      margin: 2px;
+    }
+  }
+}
+.v-pagination__list {
+  .v-btn {
+    width: 40px !important;
+    height: 40px !important;
+    font-size: 14px;
+  }
+}
+
+/* End Custom Paginate */
+
+/* Custom V-Select 
+.v-field--variant-filled .v-field__overlay {
+  background-color: unset !important;
+}
+/* End Custom V-Select 
+
+/* Custom V-Button 
+.v-btn--size-default {
+  font-size: 14px;
+}
+/* End Custom V-Button 
+
+/* Custom V-Field 
+.v-field--variant-filled {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.v-field--variant-filled .v-field__outline::before, .v-field--variant-underlined .v-field__outline::before {
+  border-color: rgba(0,0,0,.24) !important;
+  border-width: 1px !important;
+  border-radius: 4px;
+}
+.v-field--focused.v-field--variant-filled .v-field__outline::after, .v-field--focused.v-field--variant-underlined .v-field__outline::after {
+  display: none !important;
+}
+/* End Custom V-Field */
+
+/* Custom Process Linear */
+.v-progress-linear__background {
+  background: var(--green) !important;
+}
+/* End */
+
+/* Custom V-Data Table Server */
+.v-table {
+  td {
+    white-space: nowrap;
+  }
+}
+/* End Custom V-Data Table Server */
+
+/* Custom Form */
+.form-label {
+  margin-bottom: 2px;
+}
+.v-input--readonly .v-input__control {
+  background-color: #EEEEEE;
+}
+/* End Custom Form */
+
+/* Custom Grid */
+.form-wrapper {
+  .v-col-xxl,
+  .v-col-xxl-auto,
+  .v-col-xxl-12,
+  .v-col-xxl-11,
+  .v-col-xxl-10,
+  .v-col-xxl-9,
+  .v-col-xxl-8,
+  .v-col-xxl-7,
+  .v-col-xxl-6,
+  .v-col-xxl-5,
+  .v-col-xxl-4,
+  .v-col-xxl-3,
+  .v-col-xxl-2,
+  .v-col-xxl-1,
+  .v-col-xl,
+  .v-col-xl-auto,
+  .v-col-xl-12,
+  .v-col-xl-11,
+  .v-col-xl-10,
+  .v-col-xl-9,
+  .v-col-xl-8,
+  .v-col-xl-7,
+  .v-col-xl-6,
+  .v-col-xl-5,
+  .v-col-xl-4,
+  .v-col-xl-3,
+  .v-col-xl-2,
+  .v-col-xl-1,
+  .v-col-lg,
+  .v-col-lg-auto,
+  .v-col-lg-12,
+  .v-col-lg-11,
+  .v-col-lg-10,
+  .v-col-lg-9,
+  .v-col-lg-8,
+  .v-col-lg-7,
+  .v-col-lg-6,
+  .v-col-lg-5,
+  .v-col-lg-4,
+  .v-col-lg-3,
+  .v-col-lg-2,
+  .v-col-lg-1,
+  .v-col-md,
+  .v-col-md-auto,
+  .v-col-md-12,
+  .v-col-md-11,
+  .v-col-md-10,
+  .v-col-md-9,
+  .v-col-md-8,
+  .v-col-md-7,
+  .v-col-md-6,
+  .v-col-md-5,
+  .v-col-md-4,
+  .v-col-md-3,
+  .v-col-md-2,
+  .v-col-md-1,
+  .v-col-sm,
+  .v-col-sm-auto,
+  .v-col-sm-12,
+  .v-col-sm-11,
+  .v-col-sm-10,
+  .v-col-sm-9,
+  .v-col-sm-8,
+  .v-col-sm-7,
+  .v-col-sm-6,
+  .v-col-sm-5,
+  .v-col-sm-4,
+  .v-col-sm-3,
+  .v-col-sm-2,
+  .v-col-sm-1,
+  .v-col,
+  .v-col-auto,
+  .v-col-12,
+  .v-col-11,
+  .v-col-10,
+  .v-col-9,
+  .v-col-8,
+  .v-col-7,
+  .v-col-6,
+  .v-col-5,
+  .v-col-4,
+  .v-col-3,
+  .v-col-2,
+  .v-col-1 {
+    padding-top: 6px;
+    padding-bottom: 6px;
+  }
+}
+/* End Custom Grid */
