--- a/client/assets/css/global.css
+++ b/client/assets/css/global.css
@@ -951,3 +951,23 @@ a.link-footer:hover{
 .img-icon {
     
 }
+
+.tag-danger {
+    font-size: 10px;
+    color: var(--white);
+    background-color: #B00020;
+    padding: 3px;
+    border-radius: 3px;
+}
+
+.tag-success {
+    font-size: 10px;
+    color: var(--white);
+    background-color: var(--green);
+    padding: 3px;
+    border-radius: 3px;
+}
+
+.hidden-details .v-input__details {
+    display: none;
+}
