--- a/client/assets/css/global.css
+++ b/client/assets/css/global.css
@@ -24,6 +24,7 @@ body {
     /* -ms-user-select: none; */
     /* user-select: none; */
     overflow: hidden;
+    line-height: 1.7;
 }
 
 :focus-visible {
@@ -788,24 +789,16 @@ img{
     }
 }
 
-.soLuongGioHang{
-    position: absolute;
-    transform: translateY(-8px);
-    right: 0;
-    top: 0;
-    background-color: red;
-    /* border-radius: 100%; */
-    max-height: 16px;
-    width: 13px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 30%;
-}
-
 .numberOfCart{
-    transform: translateY(6px);
-    width: 13px;
+    position: absolute;
+    top: -6px;
+    left: 50%;
+    line-height: 13px;
+    background-color: red;
+    padding: 4px;
+    padding-top: 1px;
+    padding-bottom: 3px;
+    border-radius: 35%;
     text-align: center;
 }
 
